--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "undefsafe": "^2.0.5"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
