--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "minimatch": "^3.1.2",
+    "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "nodemon": "^2.0.20",
     "nopt": "^1.0.10",
@@ -39,8 +40,8 @@
     "undefsafe": "^2.0.5"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
