--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2"
