--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.5.4"
   },
   "scripts": {
