--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /workshops/ws_05/node_modules
 /workshops/ws_06/node_modules
 /workshops/ws_07/node_modules
+/workshops/ws_08/node_modules
 /native_server/node_modules
 /node_modules.js
 /handsonlab/node_modules.js
