--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /workshops/ws_06/node_modules
 /workshops/ws_07/node_modules
 /workshops/ws_08/node_modules
+/workshops/ws_09/node_modules
 /native_server/node_modules
 /node_modules.js
 /handsonlab/node_modules.js
