--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /workshops/ws_08/node_modules
 /workshops/ws_09/node_modules
 /workshops/ws_10/node_modules
+/workshops/extra_01/node_modules
 /native_server/node_modules
+/tickets/node_modules
 /node_modules.js
 /handsonlab/node_modules.js
