--- a/movies/package.json
+++ b/movies/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.2.2",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
