--- a/movies/package.json
+++ b/movies/package.json
@@ -20,14 +20,17 @@
   },
   "homepage": "https://github.com/ignacioborraz/coder-server#readme",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.2.2",
     "mongoose-paginate-v2": "^1.7.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2"
