--- a/movies/package.json
+++ b/movies/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ignacioborraz/coder-server#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.3",
@@ -30,6 +31,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0"
   },
   "devDependencies": {
