--- a/movies/package.json
+++ b/movies/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0"
   },
